--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TestEvino</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="splash_title">Evino</string>
+    <string name="splash_subtitle">Vinho - Sabor - Estilo</string>
     <string name="action_settings">Settings</string>
 </resources>
