--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
-    <string name="app_name">TestEvino</string>
+    <string name="app_name" translatable="false">TestEvino</string>
     <string name="splash_title">Evino</string>
     <string name="splash_subtitle">Vinho - Sabor - Estilo</string>
+    <string name="login_title">Logar no Evino</string>
+    <string name="user">Username</string>
+    <string name="password">Password</string>
+    <string name="bt_logar">Logar</string>
+    <string name="type_user">Digite o usuário</string>
+    <string name="type_pass">Digite a senha</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="hello_world">Hello world!</string>
 </resources>
