--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="login_title">Logar no Evino</string>
     <string name="user">Username</string>
     <string name="password">Password</string>
-    <string name="bt_logar">Logar</string>
+    <string name="bt_login">Logar</string>
+    <string name="bt_logout">Logout</string>
     <string name="type_user">Digite o usuário</string>
     <string name="type_pass">Digite a senha</string>
     <string name="tab_wines">Vinhos</string>
@@ -13,6 +14,7 @@
     <string name="wine_image_description">Garrafa de vinho</string>
     <string name="delete_purchase">Apagar a compra</string>
     <string name="total_value">Valor total: </string>
+    <string name="user_image_description">Imagem do usuário</string>
     <string name="bt_shop">Finalizar</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
